Main layout and UI

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,27 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-brand">
+                <h3 class="footer-title">Angular<span class="accent">SSR</span></h3>
+                <p class="footer-description">Professional Angular 19 SSR Template</p>
+            </div>
+            <div class="footer-links">
+                <div class="link-group">
+                    <h4>Resources</h4>
+                    <a href="#docs">Documentation</a>
+                    <a href="#features">Features</a>
+                    <a href="#about">About</a>
+                </div>
+                <div class="link-group">
+                    <h4>Community</h4>
+                    <a href="#github">GitHub</a>
+                    <a href="#discord">Discord</a>
+                    <a href="#twitter">Twitter</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; {{currentYear}} AngularSSR. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
