--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,2 +1,22 @@
-<p>header works!</p>
-<app-theme-toggle></app-theme-toggle>
+<header class="header">
+    <div class="container">
+        <nav class="nav">
+            <div class="logo">
+                <a href="/">
+                    <span class="logo-text">Angular<span class="accent">SSR</span></span>
+                </a>
+            </div>
+            <div class="nav-links">
+                <a href="#features" class="nav-link">Features</a>
+                <a href="#docs" class="nav-link">Documentation</a>
+                <a href="#about" class="nav-link">About</a>
+            </div>
+            <div class="nav-actions">
+                <app-theme-toggle></app-theme-toggle>
+                <a href="https://github.com/NizarMasadeh" target="_blank" class="github-link">
+                    <i class="pi pi-github"></i>
+                </a>
+            </div>
+        </nav>
+    </div>
+</header>
